# Rendering_Core

./: CMakeLists.txt  README.md
DisplayTarget/: CMakeLists.txt
DisplayTarget/cmake_config/: DisplayTarget.pc.in
DisplayTarget/include/DisplayTarget/: DisplayTarget.h
DisplayTarget/include/Factory/: DisplayTargetFactory.h
DisplayTarget/src/: DisplayTarget.cpp  DisplayTargetFactory.cpp
Primitives/: CMakeLists.txt
Primitives/cmake_config/: RenderingPrimitives.pc.in  RenderingPrimitives_Config.cmake.in
Primitives/include/: Primitives.h
Renderer_Interface/: CMakeLists.txt
Renderer_Interface/cmake_config/: RendererInterface.pc.in  RendererInterface_Config.cmake.in
Renderer_Interface/include/: IRenderer.h  IRenderer_HardwareQuery.h  IRenderer_Profiling.h  IRenderer_ResourceCreation.h  IRenderer_Settings.h
